13-7/y.output
문법

    0 $accept: S $end

    1 S: L '=' R
    2  | R

    3 L: '*' R
    4  | ID

    5 R: L


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 3
    '=' (61) 1
    error (256)
    ID (258) 4


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    S (7)
        on left: 1 2
        on right: 0
    L (8)
        on left: 3 4
        on right: 1 5
    R (9)
        on left: 5
        on right: 1 2 3


State 0

    0 $accept: . S $end

    ID   shift, and go to state 1
    '*'  shift, and go to state 2

    S  go to state 3
    L  go to state 4
    R  go to state 5


State 1

    4 L: ID .

    $default  reduce using rule 4 (L)


State 2

    3 L: '*' . R

    ID   shift, and go to state 1
    '*'  shift, and go to state 2

    L  go to state 6
    R  go to state 7


State 3

    0 $accept: S . $end

    $end  shift, and go to state 8


State 4

    1 S: L . '=' R
    5 R: L .

    '='  shift, and go to state 9

    $default  reduce using rule 5 (R)


State 5

    2 S: R .

    $default  reduce using rule 2 (S)


State 6

    5 R: L .

    $default  reduce using rule 5 (R)


State 7

    3 L: '*' R .

    $default  reduce using rule 3 (L)


State 8

    0 $accept: S $end .

    $default  accept


State 9

    1 S: L '=' . R

    ID   shift, and go to state 1
    '*'  shift, and go to state 2

    L  go to state 6
    R  go to state 10


State 10

    1 S: L '=' R .

    $default  reduce using rule 1 (S)
